# career-calendar-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
src/: bot.py  calendar_service.py  cert_data.py  exam_tracker.py
