[project]
name = "career-calendar-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10",
    "discord-py>=2.4",
    "google-api-python-client>=2.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "python-dotenv>=1.2.2",
]
